# libdivsufsort

./: AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  Makefile.am  NEWS  ProjectHome.md  README  SACA_Benchmarks.md  VERSION.cmake  configure.ac
examples/: Makefile.am  bwt.c  mksary.c  sasearch.c  suftest.c  unbwt.c
include/: CMakeLists.txt  Makefile.am  config.h.cmake  divsufsort.h.cmake  divsufsort.h.in  divsufsort_private.h  divsufsort_private.h.in
lib/: CMakeLists.txt  Makefile.am  divsufsort.c  sssort.c  substringsort.c  trsort.c  utils.c
pkgconfig/: CMakeLists.txt  libdivsufsort.pc.cmake
